Added SPL properties. Changed scalar descriptor type from String to PrimitiveType